2008-03-23  Bruno Coudoin,,,  <set EMAIL_ADDRESS environment variable>

	* src/boards/memory.c: (get_random_token), (create_item): Patch from
	  Karl Ove Hufthammer to display 1 + 2 instead of 1+2 and make the text
	  being white. (commit 3335)

2008-03-15  Bruno coudoin  <bruno.coudoin@free.fr>

	- It is now possible to add activity introduction voices.
	  If provided, it will be played when the activity starts and when
	  it's help is requested.
	  To provide an activity intro, you must put it under:
	  boards/voices/<locale>/activity/<activity name>-intro.ogg

	* src/boards/erase.c: (start_board), (end_board),
	(erase_one_item): moved the audio mode PLAY_AND_INTERRUPT only on
	the last item to avoid an intro voice to be cut.
	* src/gcompris/about.c: (gc_about_start): copyright is 2008 now.
	* src/gcompris/board.c: (gc_board_play): added support to play an
	optional intro voice a the start of an activity
	* src/gcompris/help.c: (gc_board_play): added support to play an
	optional intro voice when the help is lanched.
	* src/gcompris/bonus.c: (gc_bonus_display), (bonus_image):
	cleanup, removed extra warnings.
	* src/gcompris/gcompris.c: (cleanup), (single_instance_release),
	(single_instance_check): fixed the release of the lock when GC is exited.
	* src/gcompris/gameutil.c: (gc_activity_intro_play) created this function

2008-03-12   Bruno coudoin  <bruno.coudoin@free.fr>

	Updated our build system to support automake1.10
	You still need to copy config.rpath from the gettext
	package manualy.

	* ABOUT-NLS:
	* INSTALL:
	* configure.in:
	* docs/C/Makefile.am:
	* docs/C/texinfo.tex:
	* docs/eu/Makefile.am:
	* docs/fr/Makefile.am:
	* gnome2-macros/gnome-autogen.sh:
	* install-sh:
	* list_translators.sh:

2007-10-03  Bruno coudoin  <bruno.coudoin@free.fr>

	Made the chess activity to search for gnuchess in usual
	directory if it is not found in the one detected at compilation
	time. It is done to accomodate cases were the run time and build