@@ -10,16 +10,6 @@
 
 GCOMPRIS_PLUGINS := 	.
 GCOMPRIS_TOP :=		../..
-GTK_TOP :=		/gtk
-GLIB_TOP :=		/glib
-GNUWIN32_TOP :=		/gnuwin32
-LIBXML2_TOP :=		/libxml2
-SDL_TOP :=		/sdl
-CANVAS_TOP :=		/gnomecanvas
-PYTHON_TOP :=		/c/Python24
-CAIRO_TOP :=		/cairo
-GCOMPRIS_INSTALL_DIR :=	$(GCOMPRIS_TOP)/win32-install-dir
-SQLITE_TOP := /sqlite
 
 ##
 ## VARIABLE DEFINITIONS
@@ -52,9 +42,7 @@ INCLUDE_PATHS +=	-I$(GCOMPRIS_PLUGINS) \
 			-I$(GTK_TOP)/include/atk-1.0 \
 			-I$(GLIB_TOP)/lib/glib-2.0/include \
 			-I$(GTK_TOP)/lib/gtk-2.0/include \
-			-I$(CANVAS_TOP)/include/libgnomecanvas-2.0 \
 			-I$(GTK_TOP)/include/atk-1.0 \
-			-I$(GTK_TOP)/include/libart-2.0 \
 			-I$(GTK_TOP)/include/freetype2 \
 			-I$(LIBXML2_TOP)/include \
 			-I$(GNUWIN32_TOP)/include \
@@ -63,7 +51,9 @@ INCLUDE_PATHS +=	-I$(GCOMPRIS_PLUGINS) \
 			-I$(CAIRO_TOP)/include/cairo \
 			-I$(PYTHON_TOP)/include \
 			-I$(PYTHON_TOP)/include/pygtk-2.0 \
-			-I$(SQLITE_TOP)
+			-I$(SQLITE_TOP) \
+			-I$(CANVAS_TOP)/include/libgnomecanvas-2.0 \
+			-I$(CANVAS_TOP)/include/libart-2.0
 
 
 
@@ -86,8 +76,6 @@ LIBS =			-lgtk-win32-2.0 \
 			-lgmodule-2.0 \
 			-lgdk_pixbuf-2.0 \
 			-lpango-1.0 \
-			-lgnomecanvas-2 \
-			-lart_lgpl_2 \
 			-lpangoft2-1.0 \
 			-latk-1.0 \
 			-lpangowin32-1.0 \
