@@ -4,23 +4,6 @@
 # Description: Makefile for win32 (mingw) version of GCompris
 #
 
-#
-# PATHS
-#
-
-INCLUDE_DIR :=		.
-GTK_TOP :=		/gtk
-GLIB_TOP :=		/glib
-GNUWIN32_TOP :=		/gnuwin32
-LIBXML2_TOP :=		/libxml2
-GSTREAMER_TOP :=	/gstreamer
-PYTHON_TOP :=		/c/Python24
-CAIRO_TOP :=		/cairo
-GCOMPRIS_TOP :=		../..
-GCOMPRIS_SRC :=		.
-GCOMPRIS_INSTALL_DIR :=	$(GCOMPRIS_TOP)/win32-install-dir
-SQLITE_TOP :=		/sqlite
-
 ##
 ## VARIABLE DEFINITIONS
 ##
@@ -42,6 +25,7 @@ LDFLAGS = -mwindows -mno-cygwin -mms-bitfields
 ## INCLUDE  MAKEFILES
 ##
 
+GCOMPRIS_TOP :=		../..
 include $(GCOMPRIS_TOP)/global_win32.mak
 
 ##
@@ -58,9 +42,8 @@ INCLUDE_PATHS +=	-I$(INCLUDE_DIR) \
 			-I$(GTK_TOP)/lib/gtk-2.0/include \
 			-I.. \
 			-I$(GTK_TOP)/include/atk-1.0 \
-			-I$(GTK_TOP)/src/libart_lgpl \
 			-I$(GTK_TOP)/include/freetype2 \
-			-I$(GSTREAME_TOP)/include/gstreamer-0.10 \
+			-I$(GSTREAMER_TOP)/include/gstreamer-0.10 \
 			-I$(LIBXML2_TOP)/include \
 			-I$(GNUWIN32_TOP)/include \
 			-I$(CAIRO_TOP)/include/cairo \
@@ -72,9 +55,9 @@ INCLUDE_PATHS +=	-I$(INCLUDE_DIR) \
 
 LIB_PATHS =		-L$(GTK_TOP)/lib \
 	  		-L$(GLIB_TOP)/lib \
-			-L$(LIBXML2_TOP)/lib \
+			-L$(LIBXML2_TOP)/bin \
 			-L$(GNUWIN32_TOP)/lib \
-			-L$(GSTREAMER_TOP)/lib \
+			-L$(GSTREAMER_TOP)/bin \
 			-L$(CANVAS_TOP)/lib \
 			-L$(PYTHON_TOP)/libs \
 			-L$(SQLITE_TOP) \
@@ -126,9 +109,7 @@ EXE_OBJECTS = $(EXE_C_SRC:%.c=%.o) $(RC_SRC:%.rc=%.o)
 ## LIBRARIES
 ##
 
-EXE_LIBS =		../libgnomecanvas/libgnomecanvas.a \
-	 		../libart_lgpl/libart_lgpl.a \
-	 		../boards/libboards.a \
+EXE_LIBS =		../boards/libboards.a \
 			-lgtk-win32-2.0 \
 			-latk-1.0 \
 			-lpango-1.0 \
@@ -140,7 +121,9 @@ EXE_LIBS =		../libgnomecanvas/libgnomecanvas.a \
 			-lgdk_pixbuf-2.0 \
 			-lws2_32 \
 			-lxml2 \
-			-lgstreamer-0.10-0 \
+			-lgnomecanvas-2 \
+			-lart_lgpl_2 \
+			-lgstreamer-0.10 \
 			-lpangoft2-1.0 \
 			-liconv \
 			-lpython24 \
@@ -169,7 +152,7 @@ EXE_LIBS =		../libgnomecanvas/libgnomecanvas.a \
 all: $(TARGET).exe
 
 install: all
-	cp $(GCOMPRIS_SRC)/gcompris.exe $(GCOMPRIS_INSTALL_DIR)
+	cp gcompris.exe $(GCOMPRIS_INSTALL_DIR)
 
 #
 # BUILD EXE
